Fixed centering alignment #105

--- a/scss/_feedback-modal.scss
+++ b/scss/_feedback-modal.scss
@@ -58,6 +58,7 @@ body.modal-open
 }
 
 #style-manager-user-feedback-modal {
+  height: 100%;
   // Container that the modal scrolls within
   .modal {
     position: relative;
